<resources>
    <string name="app_name">Adheroics</string>

    <!-- Toast Messages -->
    <string name="login_error">Login failed</string>
    <string name="signup_succeed">Signup Succeeded</string>
    <string name="signup_error">Signup Error</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">CLC - Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="default_user_icon">Default User</string>
    <string name="dashboard_page">Dashboard</string>
    <string name="skip_login_temp">Screw login, take me to dashboard</string>
    <string name="contact_support_worker">Contact Support Worker</string>
    <string name="messages_dashboard">Messages</string>
    <string name="notification_dashboard">Notifications</string>

    <!-- Strings related to main admin page -->
    <string name="edit_account_hint">Enter CLC Account Email or Username</string>
    <string name="edit_account">Edit Existing CLC Account</string>
    <string name="create_account">Create New CLC Account</string>

    <!-- Strings related to admin edit clc account page -->
    <string name="edit_account_privilege">Edit CLC Account Privilege</string>
    <string-array name="account_privileges">
        <item>CLC Participant</item>
        <item>Support Worker</item>
        <item>Administrator</item>
    </string-array>
    <string name="remove_account">Deactivate CLC Account</string>

    <!-- Strings related to admin manage schedules page -->
    <string name="prompt_clc_name">Enter CLC Participant Name:</string>
    <string name="participant_name">Participant Name.</string>
    <string name="add_schedule">Add to Schedule</string>
    <string name="remove_schedule">Remove from Schedule</string>
    <string name="edit_schedule">Edit Existing Schedule</string>
    <string name="view_schedule">View Participant\'s Schedule</string>
    <string name="medication_header">Enter Medication Name to Remove:</string>
    <string name="remove_medication">Remove this medication from the schedule entirely.</string>

    <!-- Strings related to admin support worker page -->
    <string name="assign_header">Assign:</string>
    <string name="support_worker_name">Enter Support Worker Name</string>
    <string name="clc_participant_name">Enter CLC Participant Name</string>
    <string name="remove_header">Remove:</string>
    <string name="assign_button">Assign Support Worker to CLC Participant</string>
    <string name="remove_button">Remove Support Worker from CLC Participant</string>
    <string name="title_activity_profile_settings">Profile Settings</string>
    <string name="title_activity_app_settings">App Settings</string>

    <!-- Example General settings -->

    <!-- Strings related to Settings -->

    <!-- Profile Settings -->
    <string name="title_activity_password_confirmation">Password Confirmation</string>
    <string name="title_activity_email_confirmation">Email Confirmation</string>

    <string name="pref_title_edit_profile_picture">Profile Picture</string>

    <string name="pref_title_edit_username">Account Username</string>
    <string name="pref_display_name">Sergio Hylton</string>

    <string name="pref_title_email">Email Address</string>
    <string name="pref_email">callmesergeant@sympatico.ca</string>

    <string name="pref_title_password">Password</string>

    <string name="pref_title_phone_number">Phone Number</string>
    <string name="pref_phone_number">519 808 8008</string>

    <!-- App Settings -->

    <string name="pref_title_set_app_theme">App Theme</string>

    <string name="pref_title_set_app_font">App Font</string>

    <string name="pref_title_enable_notifications">Enable Notifications</string>

    <string-array name="App_Theme">
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string-array name="App_Theme_Values">
        <item>light</item>
        <item>dark</item>
    </string-array>

    <!-- Foobar -->


    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="add_medication_type">
        <item>Capsule</item>
        <item>Liquid</item>
    </string-array>

    <string-array name="AM_PM">
        <item>AM</item>
        <item>PM</item>
    </string-array>


    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>