<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.uoguelph.socs.group32.adheroics.ManageSupportWorkersActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/assign_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/remove_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/assign_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/assign_header"
            app:layout_constraintLeft_toLeftOf="@id/assign_container"
            app:layout_constraintTop_toTopOf="@+id/assign_container" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/CLCBlue"
            app:layout_constraintTop_toBottomOf="@+id/assign_tag" />

        <TextView
            android:id="@+id/support_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support_worker_name"
            app:layout_constraintLeft_toLeftOf="@id/assign_container"
            app:layout_constraintTop_toBottomOf="@+id/line1"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="19dp" />

        <EditText
            android:id="@+id/support_text"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            app:layout_constraintLeft_toLeftOf="@id/assign_container"
            app:layout_constraintTop_toBottomOf="@+id/support_name" />

        <TextView
            android:id="@+id/participant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clc_participant_name"
            app:layout_constraintLeft_toLeftOf="@id/assign_container"
            app:layout_constraintTop_toBottomOf="@+id/support_text"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="77dp" />

        <EditText
            android:id="@+id/participant_text"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            app:layout_constraintLeft_toLeftOf="@id/assign_container"
            app:layout_constraintTop_toBottomOf="@+id/participant_name" />

        <Button
            android:id="@+id/assign_support_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:padding="12dp"
            android:text="@string/assign_button"
            app:layout_constraintBottom_toBottomOf="@id/assign_container"
            app:layout_constraintLeft_toLeftOf="@id/assign_container"
            app:layout_constraintRight_toRightOf="@id/assign_container"
            app:layout_constraintTop_toBottomOf="@id/participant_text" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/remove_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assign_container">

        <TextView
            android:id="@+id/remove_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_header"
            app:layout_constraintLeft_toLeftOf="@id/remove_container"
            app:layout_constraintTop_toTopOf="@id/remove_container"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/CLCBlue"
            app:layout_constraintTop_toBottomOf="@+id/remove_tag" />

        <TextView
            android:id="@+id/support_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support_worker_name"
            app:layout_constraintLeft_toLeftOf="@id/remove_container"
            app:layout_constraintTop_toBottomOf="@+id/line2"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="19dp" />

        <EditText
            android:id="@+id/support_text2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            app:layout_constraintLeft_toLeftOf="@id/remove_container"
            app:layout_constraintTop_toBottomOf="@+id/support_name2" />

        <TextView
            android:id="@+id/participant_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clc_participant_name"
            app:layout_constraintLeft_toLeftOf="@id/remove_container"
            app:layout_constraintTop_toBottomOf="@+id/support_text2"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="77dp" />

        <EditText
            android:id="@+id/participant_text2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            app:layout_constraintLeft_toLeftOf="@id/remove_container"
            app:layout_constraintTop_toBottomOf="@id/participant_name2" />

        <Button
            android:id="@+id/remove_support_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:padding="12dp"
            android:text="@string/remove_button"
            app:layout_constraintBottom_toBottomOf="@id/remove_container"
            app:layout_constraintLeft_toLeftOf="@id/remove_container"
            app:layout_constraintRight_toRightOf="@id/remove_container"
            app:layout_constraintTop_toBottomOf="@id/participant_text2" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
