<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.uoguelph.socs.group32.adheroics.Dashboard">

    <ImageButton
        android:id="@+id/messages_admin_dashboard"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/notifications_admin_dashboard"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_message_black_24dp" />

    <ImageButton
        android:id="@+id/notifications_admin_dashboard"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/messages_admin_dashboard"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_notifications_none_black_24dp" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/CLCGreen"
        app:layout_constraintTop_toBottomOf="@+id/notifications_admin_dashboard" />

    <EditText
        android:id="@+id/clc_account_username"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edit_account_hint"
        app:layout_constraintBottom_toTopOf="@+id/edit_clc_account"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1" />

    <Button
        android:id="@+id/edit_clc_account"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/edit_account"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clc_account_username"
        app:layout_constraintBottom_toTopOf="@+id/line2"/>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/CLCGreen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_clc_account"
        app:layout_constraintBottom_toTopOf="@+id/create_clc_account"
        />

    <Button
        android:id="@+id/create_clc_account"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/create_account"
        app:layout_constraintTop_toBottomOf="@id/line2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</android.support.constraint.ConstraintLayout>
